--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -45,4 +45,4 @@
   city: Stockholm
   start_date: 2013-11-01
   description:
-  - Lead front end developer within the core team of the company's two web services. End to end development.
+  - Lead front end developer within the core team of the company's two web services, doing both front and back end development.
