change email adress

--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: andreas@enigma.cc
+email: hello@zykadelic.com
 twitter: https://twitter.com/zykadelic
 github: https://github.com/zykadelic
 careers: http://careers.stackoverflow.com/zykadelic
