move base view layout to separate layout file

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,8 @@ exclude:
   - CNAME
   - Gemfile*
   - README.md
+defaults:
+  - scope:
+      path: '' # everything
+    values:
+      layout: default
