--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,3 +1,13 @@
+- role: Student
+  company: MediaGymnasiet
+  type: education
+  city: Stockholm
+  start_date: 2008-08-01
+  end_date: 2011-06-01
+  description:
+  - Studied photography, philosophy, psychology, graphical design, 3D design- and animation, and web development. Majored in the latter, where I substited the class at multiple occasions and received a scholarship at graduation.
+  - Learned HTML, CSS, JavaScript, ActionScript, PHP, MySQL, and Adobe Photoshop. Experimented with virtual reality.
+
 - role: Web Developer internship
   company: Mozoomi
   city: Stockholm
