--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -6,7 +6,7 @@
   end_date: 2011-06-01
   description:
   - Studied photography, philosophy, psychology, graphical design, 3D design- and animation, and web development. Majored in the latter, where I substited the class at multiple occasions and received a scholarship at graduation.
-  - Learned HTML, CSS, JavaScript, ActionScript, PHP, MySQL, and Autodesk Maya. Experimented with virtual reality.
+  - Learned HTML, CSS, JavaScript, ActionScript, PHP, MySQL, and Autodesk Maya. Experimented with augmented reality.
 
 - role: Web Developer
   company: Mozoomi
