--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,3 +3,4 @@ twitter: https://twitter.com/zykadelic
 github: https://github.com/zykadelic
 stackoverflow: http://stackoverflow.com/users/638254/zykadelic
 coderwall: https://coderwall.com/zykadelic
+linkedin: http://www.linkedin.com/in/zykadelic
